@@ -2,7 +2,7 @@
   html: {
     data: {
       behavior: 'local-auto-save',
-      auto_save_key: @issue.new_record? ? "project-#{current_project.id}-issue" : "issue-#{@issue.id}"
+      auto_save_key: @issue.new_record? ? "project-#{current_project.id}-issue#{"-#{params[:template]}" if params[:template]}" : "issue-#{@issue.id}"
     }
   } do |f| %>
 
