@@ -261,6 +261,7 @@ describe "note pages" do
 
       let(:model_path) { new_project_node_note_path(current_project, @node) }
       let(:model_attributes) { [{ name: :text, value: 'New Note' }] }
+      let(:model_attributes_for_template) { [{ name: :text, value: 'New Note Template' }] }
 
       include_examples 'a form with local auto save', Note, :new
     end
