@@ -15,6 +15,7 @@ v3.17 (Month 2020)
   * Improve current implementation of persisting data when creating and editing Card, Evidence, Issue, and Note
     - Data now persists for the whole form instead of only the textarea
     - Data will be cleared when the "Cancel" link is clicked
+    - Extend functionality to work with templates
     - Removed prompt to restore data
   * Link to Methodology from project summary chart
   * Navigation sidebar in projects can be kept open while navigating across views
